fix: Turkish translations

--- a/erpnext/locale/tr.po
+++ b/erpnext/locale/tr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-06-01 09:36+0000\n"
-"PO-Revision-Date: 2025-06-01 21:35\n"
+"PO-Revision-Date: 2025-06-04 22:49\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Turkish\n"
 "MIME-Version: 1.0\n"
@@ -4393,7 +4393,7 @@ msgstr "Kullanıcının Fiyatı Düzenlemesine İzin Verin"
 #. Settings'
 #: erpnext/stock/doctype/item_variant_settings/item_variant_settings.json
 msgid "Allow Variant UOM to be different from Template UOM"
-msgstr ""
+msgstr "Varyant Ölçü Biriminin Şablon Ölçü Biriminden farklı olmasına izin ver"
 
 #. Label of the allow_zero_rate (Check) field in DocType 'Repost Item
 #. Valuation'
@@ -5003,7 +5003,7 @@ msgstr "Tutar Farkı"
 #. DocType 'Purchase Receipt Item'
 #: erpnext/stock/doctype/purchase_receipt_item/purchase_receipt_item.json
 msgid "Amount Difference with Purchase Invoice"
-msgstr ""
+msgstr "Satın Alma Faturası ile Fiyat Farkı"
 
 #. Label of the amount_eligible_for_commission (Currency) field in DocType 'POS
 #. Invoice'
@@ -5035,7 +5035,7 @@ msgstr "Hesap Para Birimindeki Tutar"
 
 #: erpnext/accounts/print_format/sales_invoice_print/sales_invoice_print.html:119
 msgid "Amount in Words"
-msgstr ""
+msgstr "Yazı ile Tutar"
 
 #. Description of the 'Outstanding Amount' (Currency) field in DocType 'Payment
 #. Request'
@@ -8958,7 +8958,7 @@ msgstr "Satış Siparişinde Borç Limiti Kontrolünü Atla"
 
 #: erpnext/accounts/print_format/sales_invoice_print/sales_invoice_print.html:11
 msgid "CANCELLED"
-msgstr ""
+msgstr "İPTAL EDİLDİ"
 
 #. Label of the cc (Link) field in DocType 'Process Statement Of Accounts CC'
 #: erpnext/accounts/doctype/process_statement_of_accounts_cc/process_statement_of_accounts_cc.json
@@ -9913,30 +9913,30 @@ msgstr ""
 
 #: erpnext/buying/report/supplier_quotation_comparison/supplier_quotation_comparison.js:84
 msgid "Categorize by Item"
-msgstr ""
+msgstr "Ürüne Göre"
 
 #: erpnext/accounts/report/general_ledger/general_ledger.js:133
 msgid "Categorize by Party"
-msgstr ""
+msgstr "Cariye Göre"
 
 #: erpnext/buying/report/supplier_quotation_comparison/supplier_quotation_comparison.js:83
 #: erpnext/buying/report/supplier_quotation_comparison/supplier_quotation_comparison.js:86
 msgid "Categorize by Supplier"
-msgstr ""
+msgstr "Tedarikçiye Göre"
 
 #. Option for the 'Categorize By' (Select) field in DocType 'Process Statement
 #. Of Accounts'
 #: erpnext/accounts/doctype/process_statement_of_accounts/process_statement_of_accounts.json
 #: erpnext/accounts/report/general_ledger/general_ledger.js:121
 msgid "Categorize by Voucher"
-msgstr ""
+msgstr "Faturaya Göre"
 
 #. Option for the 'Categorize By' (Select) field in DocType 'Process Statement
 #. Of Accounts'
 #: erpnext/accounts/doctype/process_statement_of_accounts/process_statement_of_accounts.json
 #: erpnext/accounts/report/general_ledger/general_ledger.js:125
 msgid "Categorize by Voucher (Consolidated)"
-msgstr ""
+msgstr "Faturaya Göre (Konsolide)"
 
 #. Label of the category (Link) field in DocType 'UOM Conversion Factor'
 #: erpnext/setup/doctype/uom_conversion_factor/uom_conversion_factor.json
@@ -10633,7 +10633,7 @@ msgstr "Kapanış Metni"
 
 #: erpnext/accounts/report/general_ledger/general_ledger.html:135
 msgid "Closing [Opening + Total] "
-msgstr ""
+msgstr "Kapanış [Açılış + Toplam] "
 
 #. Label of the code (Data) field in DocType 'Incoterm'
 #: erpnext/edi/doctype/code_list/code_list_import.js:172
@@ -14639,17 +14639,17 @@ msgstr "Müşteri Adlandırması"
 #. Supplier'
 #: erpnext/buying/doctype/customer_number_at_supplier/customer_number_at_supplier.json
 msgid "Customer Number"
-msgstr ""
+msgstr "Müşteri Numarası"
 
 #. Name of a DocType
 #: erpnext/buying/doctype/customer_number_at_supplier/customer_number_at_supplier.json
 msgid "Customer Number At Supplier"
-msgstr ""
+msgstr "Tedarikçideki Müşteri Numarası"
 
 #. Label of the customer_numbers (Table) field in DocType 'Supplier'
 #: erpnext/buying/doctype/supplier/supplier.json
 msgid "Customer Numbers"
-msgstr ""
+msgstr "Müşteri Numaraları"
 
 #: erpnext/stock/report/delayed_item_report/delayed_item_report.py:165
 #: erpnext/stock/report/delayed_order_report/delayed_order_report.py:80
@@ -14936,7 +14936,7 @@ msgstr "Tarihe Göre"
 #. 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Data Fetch Method"
-msgstr ""
+msgstr "Veri Alma Yöntemi"
 
 #. Label of the data_import_configuration_section (Section Break) field in
 #. DocType 'Bank'
@@ -16987,11 +16987,11 @@ msgstr "Fark Hesabı"
 
 #: erpnext/stock/doctype/stock_entry/stock_entry.py:545
 msgid "Difference Account in Items Table"
-msgstr ""
+msgstr "Kalemler Tablosundaki Fark Hesabı"
 
 #: erpnext/stock/doctype/stock_entry/stock_entry.py:534
 msgid "Difference Account must be a Asset/Liability type account (Temporary Opening), since this Stock Entry is an Opening Entry"
-msgstr ""
+msgstr "Bu Stok Mutabakatı bir Hesap Açılış Kaydı olduğundan farklı hesabının aktif ya da pasif bir hesap tipi olması gerekmektedir"
 
 #: erpnext/stock/doctype/stock_reconciliation/stock_reconciliation.py:950
 msgid "Difference Account must be a Asset/Liability type account, since this Stock Reconciliation is an Opening Entry"
@@ -17302,7 +17302,7 @@ msgstr "Dağıtıldı"
 #. Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Discard Changes and Load New Invoice"
-msgstr ""
+msgstr "Değişiklikleri Sil ve Yeni Fatura Yükle"
 
 #. Label of the discount (Float) field in DocType 'Payment Schedule'
 #. Label of the discount (Float) field in DocType 'Payment Term'
@@ -17571,7 +17571,7 @@ msgstr "Sevkiyat Adresi"
 #. 'Purchase Order'
 #: erpnext/buying/doctype/purchase_order/purchase_order.json
 msgid "Dispatch Address Details"
-msgstr ""
+msgstr "Gönderim Adresi Ayrıntıları"
 
 #. Label of the dispatch_address_name (Link) field in DocType 'Sales Invoice'
 #. Label of the dispatch_address_name (Link) field in DocType 'Sales Order'
@@ -17585,7 +17585,7 @@ msgstr "Sevk Adresi"
 #. Label of the dispatch_address (Link) field in DocType 'Purchase Receipt'
 #: erpnext/stock/doctype/purchase_receipt/purchase_receipt.json
 msgid "Dispatch Address Template"
-msgstr ""
+msgstr "Gönderim Adresi Şablonu"
 
 #. Label of the section_break_9 (Section Break) field in DocType 'Delivery
 #. Stop'
@@ -17624,7 +17624,7 @@ msgstr "Bertaraf Tarihi"
 
 #: erpnext/assets/doctype/asset/depreciation.py:824
 msgid "Disposal date {0} cannot be before {1} date {2} of the asset."
-msgstr ""
+msgstr "Elden çıkarma tarihi {0} varlığın {1} tarihinden {2} önce olamaz."
 
 #. Label of the distance (Float) field in DocType 'Delivery Stop'
 #: erpnext/stock/doctype/delivery_stop/delivery_stop.json
@@ -17799,7 +17799,7 @@ msgstr "Hala negatif envanteri etkinleştirmek istiyor musunuz?"
 
 #: erpnext/stock/doctype/item/item.js:24
 msgid "Do you want to change valuation method?"
-msgstr ""
+msgstr "Değerleme yöntemini değiştirmek istiyor musunuz?"
 
 #: erpnext/stock/doctype/delivery_trip/delivery_trip.js:156
 msgid "Do you want to notify all the customers by email?"
@@ -18319,7 +18319,7 @@ msgstr "Projeyi Görevlerle Çoğalt"
 
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.py:144
 msgid "Duplicate Sales Invoices found"
-msgstr ""
+msgstr "Yinelenen Satış Faturaları bulundu"
 
 #: erpnext/stock/doctype/stock_closing_entry/stock_closing_entry.py:78
 msgid "Duplicate Stock Closing Entry"
@@ -19091,7 +19091,7 @@ msgstr ""
 #. 'Manufacturing Settings'
 #: erpnext/manufacturing/doctype/manufacturing_settings/manufacturing_settings.json
 msgid "Enabling this checkbox will force each Job Card Time Log to have From Time and To Time"
-msgstr ""
+msgstr "Bu onay kutusunun etkinleştirilmesi, her İş Kartı Zaman Günlüğünün Şu Zamandan ve Şu Zamana sahip olmasını zorunlu kılar"
 
 #. Description of the 'Check Supplier Invoice Number Uniqueness' (Check) field
 #. in DocType 'Accounts Settings'
@@ -19216,7 +19216,7 @@ msgstr "Enerji"
 #. Settings'
 #: erpnext/manufacturing/doctype/manufacturing_settings/manufacturing_settings.json
 msgid "Enforce Time Logs"
-msgstr ""
+msgstr "Zaman Günlüklerini Uygula"
 
 #: erpnext/setup/setup_wizard/data/designation.txt:15
 msgid "Engineer"
@@ -19946,7 +19946,7 @@ msgstr "Gider hesabı {0} kalemi için zorunludur"
 
 #: erpnext/assets/doctype/asset_repair/asset_repair.py:108
 msgid "Expense account {0} not present in Purchase Invoice {1}"
-msgstr ""
+msgstr "Satın Alma Faturasında {0} Gider Hesabı Belirtilmemiş"
 
 #: erpnext/accounts/doctype/account/chart_of_accounts/verified/standard_chart_of_accounts.py:42
 #: erpnext/accounts/doctype/account/chart_of_accounts/verified/standard_chart_of_accounts_with_account_number.py:61
@@ -20291,7 +20291,7 @@ msgstr "Ürünleri Depodan Getir"
 
 #: erpnext/crm/doctype/opportunity/opportunity.js:117
 msgid "Fetch Latest Exchange Rate"
-msgstr ""
+msgstr "Son Döviz Kurunu Getir"
 
 #: erpnext/accounts/doctype/dunning/dunning.js:61
 msgid "Fetch Overdue Payments"
@@ -20660,7 +20660,7 @@ msgstr "Bitmiş Ürün Miktarı "
 #. field in DocType 'Work Order'
 #: erpnext/manufacturing/doctype/work_order/work_order.json
 msgid "Finished Good Serial / Batch"
-msgstr ""
+msgstr "Bitmiş Ürün Seri / Parti"
 
 #. Label of the finished_good_uom (Link) field in DocType 'Subcontracting BOM'
 #: erpnext/subcontracting/doctype/subcontracting_bom/subcontracting_bom.json
@@ -23117,7 +23117,7 @@ msgstr "Resimleri Gizle"
 
 #: erpnext/selling/page/point_of_sale/pos_controller.js:282
 msgid "Hide Recent Orders"
-msgstr ""
+msgstr "Son Siparişleri Gizle"
 
 #. Label of the hide_unavailable_items (Check) field in DocType 'POS Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
@@ -25947,7 +25947,7 @@ msgstr "Giden"
 #. Label of the is_packed (Check) field in DocType 'Serial and Batch Bundle'
 #: erpnext/stock/doctype/serial_and_batch_bundle/serial_and_batch_bundle.json
 msgid "Is Packed"
-msgstr ""
+msgstr "Paketlendi"
 
 #. Label of the is_paid (Check) field in DocType 'Purchase Invoice'
 #: erpnext/accounts/doctype/purchase_invoice/purchase_invoice.json
@@ -26109,7 +26109,7 @@ msgstr "Abonelik"
 #. Label of the is_created_using_pos (Check) field in DocType 'Sales Invoice'
 #: erpnext/accounts/doctype/sales_invoice/sales_invoice.json
 msgid "Is created using POS"
-msgstr ""
+msgstr "POS kullanılarak oluşturuldu"
 
 #. Label of the included_in_print_rate (Check) field in DocType 'Purchase Taxes
 #. and Charges'
@@ -28510,7 +28510,7 @@ msgstr "Sol Dizin"
 #. Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Legacy Fields"
-msgstr ""
+msgstr "Eski Alanlar"
 
 #: erpnext/setup/doctype/company/company.py:420
 #: erpnext/setup/setup_wizard/data/industry_type.txt:30
@@ -31676,7 +31676,7 @@ msgstr "Net Kâr/Zarar"
 #. Label of the gross_purchase_amount (Currency) field in DocType 'Asset'
 #: erpnext/assets/doctype/asset/asset.json
 msgid "Net Purchase Amount"
-msgstr ""
+msgstr "Net Satın Alma Tutarı"
 
 #. Label of the net_rate (Currency) field in DocType 'POS Invoice Item'
 #. Label of the net_rate (Currency) field in DocType 'Purchase Invoice Item'
@@ -31917,7 +31917,7 @@ msgstr "Yeni Gelir"
 
 #: erpnext/selling/page/point_of_sale/pos_controller.js:244
 msgid "New Invoice"
-msgstr ""
+msgstr "Yeni Fatura"
 
 #: erpnext/assets/doctype/location/location_tree.js:23
 msgid "New Location"
@@ -32181,7 +32181,7 @@ msgstr "Açıklama Yok"
 
 #: erpnext/public/js/utils/unreconcile.js:147
 msgid "No Selection"
-msgstr ""
+msgstr "Seçim Yok"
 
 #: erpnext/controllers/sales_and_purchase_return.py:824
 msgid "No Serial / Batches are available for return"
@@ -35921,7 +35921,7 @@ msgstr "Ödeme Planı"
 
 #: erpnext/accounts/print_format/sales_invoice_print/sales_invoice_print.html:123
 msgid "Payment Status"
-msgstr ""
+msgstr "Ödeme Durumu"
 
 #. Label of the payment_term (Link) field in DocType 'Overdue Payment'
 #. Label of the payment_term (Link) field in DocType 'Payment Entry Reference'
@@ -42628,7 +42628,7 @@ msgstr "İade Edilebilir Standart Oranlı Giderler, Ters Yükleme Uygulanıyorke
 #. Valuation'
 #: erpnext/stock/doctype/repost_item_valuation/repost_item_valuation.json
 msgid "Recreate Stock Ledgers"
-msgstr ""
+msgstr "Stok Defterlerini Yeniden Oluştur"
 
 #. Label of the recurse_for (Float) field in DocType 'Pricing Rule'
 #. Label of the recurse_for (Float) field in DocType 'Promotional Scheme
@@ -46137,7 +46137,7 @@ msgstr "Satış Faturası Ödemesi"
 #. Name of a DocType
 #: erpnext/accounts/doctype/sales_invoice_reference/sales_invoice_reference.json
 msgid "Sales Invoice Reference"
-msgstr ""
+msgstr "Satış Faturası Referansı"
 
 #. Name of a DocType
 #: erpnext/accounts/doctype/sales_invoice_timesheet/sales_invoice_timesheet.json
@@ -46148,7 +46148,7 @@ msgstr "Satış Faturası Zaman Çizelgesi"
 #. Closing Entry'
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.json
 msgid "Sales Invoice Transactions"
-msgstr ""
+msgstr "Satış Fatura İşlemleri"
 
 #. Name of a report
 #. Label of a Link in the Financial Reports Workspace
@@ -46161,7 +46161,7 @@ msgstr "Satış Faturası Trendleri"
 
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.py:169
 msgid "Sales Invoice does not have Payments"
-msgstr ""
+msgstr "Satış Faturasında Ödemeler Yok"
 
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.py:165
 msgid "Sales Invoice is already consolidated"
@@ -46173,11 +46173,11 @@ msgstr ""
 
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.py:177
 msgid "Sales Invoice is not submitted"
-msgstr ""
+msgstr "Satış Faturası gönderilmedi"
 
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.py:180
 msgid "Sales Invoice isn't created by user {}"
-msgstr ""
+msgstr "Satış Faturası {} kullanıcısı tarafından oluşturulmadı"
 
 #: erpnext/accounts/doctype/pos_invoice/pos_invoice.py:431
 msgid "Sales Invoice mode is activated in POS. Please create Sales Invoice instead."
