--- a/erpnext/translations/vi.csv
+++ b/erpnext/translations/vi.csv
@@ -8786,6 +8786,6 @@ Address Information, Thông tin địa chỉ
 Lead Status, Trạng thái tiềm năng
 Customer Rank, Xếp hạng
 Hot Opportunity, Cơ hội nóng
-Warn Opportunity, Cơ hội ấm
+Warm Opportunity, Cơ hội ấm
 Cold Opportunity, Cơ hội lạnh
 Probability, Xác suất
