fix: Serbian (Latin) translations

--- a/erpnext/locale/sr_CS.po
+++ b/erpnext/locale/sr_CS.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-06-08 09:35+0000\n"
-"PO-Revision-Date: 2025-06-08 23:32\n"
+"PO-Revision-Date: 2025-06-11 00:17\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Serbian (Latin)\n"
 "MIME-Version: 1.0\n"
@@ -2398,7 +2398,7 @@ msgstr "Radnja ukoliko je godišnji budžet premašen po kumulativnim troškovim
 #. Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Action if Same Rate is Not Maintained Throughout  Internal Transaction"
-msgstr ""
+msgstr "Radnja ukoliko ista stopa nije održana tokom interne transakcije"
 
 #. Label of the maintain_same_rate_action (Select) field in DocType 'Selling
 #. Settings'
@@ -29150,7 +29150,7 @@ msgstr "Održavanje imovine"
 #. DocType 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Maintain Same Rate Throughout Internal Transaction"
-msgstr ""
+msgstr "Održavaj istu stopu tokom interne transakcije"
 
 #. Label of the maintain_same_sales_rate (Check) field in DocType 'Selling
 #. Settings'
@@ -45161,7 +45161,7 @@ msgstr "Red #{0}: Stavka {1} je odabrana, molimo Vas da rezervišite zalihe sa l
 
 #: erpnext/controllers/stock_controller.py:87
 msgid "Row #{0}: Item {1} has zero rate but 'Allow Zero Valuation Rate' is not enabled."
-msgstr ""
+msgstr "Red #{0}: Stavka {1} ima nultu stopu ali opcija 'Dozvoli nultu stopu vrednovanja' nije omogućena."
 
 #: erpnext/stock/doctype/stock_reconciliation/stock_reconciliation.py:726
 msgid "Row #{0}: Item {1} is not a Serialized/Batched Item. It cannot have a Serial No/Batch No against it."
