fix: Swedish translations

--- a/erpnext/locale/sv.po
+++ b/erpnext/locale/sv.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-06-08 09:35+0000\n"
-"PO-Revision-Date: 2025-06-11 00:16\n"
+"PO-Revision-Date: 2025-06-12 00:28\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Swedish\n"
 "MIME-Version: 1.0\n"
@@ -2398,13 +2398,13 @@ msgstr "Åtgärd om Årsbudget Överskridits på Ackumulerad Kostnad"
 #. Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Action if Same Rate is Not Maintained Throughout  Internal Transaction"
-msgstr "Åtgärd om Samma Pris inte upprätthålls genom hela Interna Transaktionen"
+msgstr "Åtgärd om Samma Marginal inte bibehålls under hela interna Transaktionen"
 
 #. Label of the maintain_same_rate_action (Select) field in DocType 'Selling
 #. Settings'
 #: erpnext/selling/doctype/selling_settings/selling_settings.json
 msgid "Action if Same Rate is Not Maintained Throughout Sales Cycle"
-msgstr "Åtgärd om samma Pris inte bibehålls under Försäljning"
+msgstr "Åtgärd om samma Marginal inte bibehålls under Försäljning"
 
 #. Label of the action_on_new_invoice (Select) field in DocType 'POS Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
@@ -6633,7 +6633,7 @@ msgstr "Automatiskt Stäng Besvarad Möjlighet efter ovan angivet antal dagar"
 #. DocType 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Auto match and set the Party in Bank Transactions"
-msgstr "Automatiskt avstäm och ange Parti i Bank Transaktioner"
+msgstr "Automatiskt stäm av och ange Parti i Bank Transaktioner"
 
 #. Label of the reorder_section (Section Break) field in DocType 'Item'
 #: erpnext/stock/doctype/item/item.json
@@ -17917,7 +17917,7 @@ msgstr "Dokument "
 #. 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Documents Processed on each trigger. Queue Size should be between 5 and 100"
-msgstr "Dokument Behandlade vid varje utlösare. Kö storlek bör vara mellan 5 och 100"
+msgstr "Dokument Behandlade vid varje utlösare. Kö Storlek ska vara mellan 5 och 100"
 
 #: erpnext/accounts/doctype/repost_accounting_ledger/repost_accounting_ledger.py:233
 msgid "Documents: {0} have deferred revenue/expense enabled for them. Cannot repost."
@@ -19281,7 +19281,7 @@ msgstr "Ange Besök Detaljer"
 
 #: erpnext/manufacturing/doctype/routing/routing.js:78
 msgid "Enter a name for Routing."
-msgstr "Ange namn för Åtgärd Följd."
+msgstr "Ange namn för Åtgärd Ordning."
 
 #: erpnext/manufacturing/doctype/operation/operation.js:20
 msgid "Enter a name for the Operation, for example, Cutting."
@@ -29148,18 +29148,18 @@ msgstr "Underhåll Tillgång"
 #. DocType 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Maintain Same Rate Throughout Internal Transaction"
-msgstr "Bibehåll Samma Pris under hela Interna Transaktionen"
+msgstr "Bibehåll Samma Marginal under hela Interna Transaktionen"
 
 #. Label of the maintain_same_sales_rate (Check) field in DocType 'Selling
 #. Settings'
 #: erpnext/selling/doctype/selling_settings/selling_settings.json
 msgid "Maintain Same Rate Throughout Sales Cycle"
-msgstr "Upprätthåll Försäljning Marginal"
+msgstr "Bibehåll Försäljning Marginal"
 
 #. Label of the maintain_same_rate (Check) field in DocType 'Buying Settings'
 #: erpnext/buying/doctype/buying_settings/buying_settings.json
 msgid "Maintain Same Rate Throughout the Purchase Cycle"
-msgstr "Upprätthåll Inköp Marginal"
+msgstr "Bibehåll Inköp Marginal"
 
 #. Label of the is_stock_item (Check) field in DocType 'Item'
 #: erpnext/stock/doctype/item/item.json
@@ -44910,12 +44910,12 @@ msgstr "Sökväg"
 #: erpnext/manufacturing/doctype/routing/routing.json
 #: erpnext/manufacturing/workspace/manufacturing/manufacturing.json
 msgid "Routing"
-msgstr "Åtgärd Följd"
+msgstr "Åtgärd Ordning"
 
 #. Label of the routing_name (Data) field in DocType 'Routing'
 #: erpnext/manufacturing/doctype/routing/routing.json
 msgid "Routing Name"
-msgstr "Åtgärd Följd Namn"
+msgstr "Åtgärd Ordning Benämning"
 
 #: erpnext/stock/doctype/stock_reconciliation/stock_reconciliation.py:664
 msgid "Row #"
