fix: Turkish translations

--- a/erpnext/locale/tr.po
+++ b/erpnext/locale/tr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-06-08 09:35+0000\n"
-"PO-Revision-Date: 2025-06-08 23:31\n"
+"PO-Revision-Date: 2025-06-12 00:28\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Turkish\n"
 "MIME-Version: 1.0\n"
@@ -375,7 +375,7 @@ msgstr "(K) Değerleme = Değer (D) ÷ Miktar (A)"
 #. DocType 'Budget'
 #: erpnext/accounts/doctype/budget/budget.json
 msgid "(Purchase Order + Material Request + Actual Expense)"
-msgstr ""
+msgstr "(Satın Alma Siparişi + Malzeme Talebi + Gerçek Gider)"
 
 #. Description of the 'From No' (Int) field in DocType 'Share Transfer'
 #. Description of the 'To No' (Int) field in DocType 'Share Transfer'
@@ -1554,7 +1554,7 @@ msgstr "Hesap {0} geçersiz. Hesap Para Birimi {1} olmalıdır"
 
 #: erpnext/accounts/doctype/journal_entry/journal_entry.py:280
 msgid "Account {0} should be of type Expense"
-msgstr ""
+msgstr "Hesap {0} Gider türünde olmalıdır"
 
 #: erpnext/accounts/doctype/account/account.py:148
 msgid "Account {0}: Parent account {1} can not be a ledger"
@@ -2103,7 +2103,7 @@ msgstr "Alacak Hesapları"
 #. field in DocType 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Accounts Receivable / Payable Tuning"
-msgstr ""
+msgstr "Alacaklar / Borçlar Ayarlaması"
 
 #. Label of the accounts_receivable_credit (Link) field in DocType 'Invoice
 #. Discounting'
@@ -2409,7 +2409,7 @@ msgstr "Satış Döngüsü Boyunca Aynı Oran Korunmazsa Yapılacak İşlem"
 #. Label of the action_on_new_invoice (Select) field in DocType 'POS Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Action on New Invoice"
-msgstr ""
+msgstr "Yeni Fatura Üzerinde İşlem"
 
 #. Label of the actions (Section Break) field in DocType 'Supplier Scorecard
 #. Scoring Standing'
@@ -3170,7 +3170,7 @@ msgstr "Ekle Bilgi"
 
 #: erpnext/selling/page/point_of_sale/pos_payment.js:84
 msgid "Additional Information updated successfully."
-msgstr ""
+msgstr "Ek Bilgiler başarıyla güncellendi."
 
 #. Label of the additional_notes (Text) field in DocType 'Quotation Item'
 #. Label of the additional_notes (Text) field in DocType 'Sales Order Item'
@@ -3726,7 +3726,7 @@ msgstr "Gün"
 #: erpnext/accounts/report/accounts_receivable/accounts_receivable.html:133
 #: erpnext/accounts/report/accounts_receivable/accounts_receivable.py:1127
 msgid "Age (Days)"
-msgstr "Yaş (Gün)"
+msgstr "Geçen Gün"
 
 #: erpnext/stock/report/stock_ageing/stock_ageing.py:218
 msgid "Age ({0})"
@@ -4310,13 +4310,13 @@ msgstr "Satın Alma Fişi Olmadan Fatura Oluşturmaya İzin Ver"
 #. 'Buying Settings'
 #: erpnext/buying/doctype/buying_settings/buying_settings.json
 msgid "Allow Purchase Order with Zero Quantity"
-msgstr ""
+msgstr "Sıfır Miktarlı Satın Alma Emrine İzin Ver"
 
 #. Label of the allow_zero_qty_in_quotation (Check) field in DocType 'Selling
 #. Settings'
 #: erpnext/selling/doctype/selling_settings/selling_settings.json
 msgid "Allow Quotation with Zero Quantity"
-msgstr ""
+msgstr "Sıfır Miktarla Fiyat Teklifine İzin Ver"
 
 #. Label of the allow_rename_attribute_value (Check) field in DocType 'Item
 #. Variant Settings'
@@ -4329,7 +4329,7 @@ msgstr "Öznitelik Değerini Yeniden Adlandırmaya İzin Ver"
 #. DocType 'Buying Settings'
 #: erpnext/buying/doctype/buying_settings/buying_settings.json
 msgid "Allow Request for Quotation with Zero Quantity"
-msgstr ""
+msgstr "Sıfır Miktarlı Fiyat Teklifi Talebine İzin Ver"
 
 #. Label of the allow_resetting_service_level_agreement (Check) field in
 #. DocType 'Support Settings'
@@ -4366,7 +4366,7 @@ msgstr "Süresi Dolmuş Teklif İçin Müşteri Siparişi Oluşturulmasına İzi
 #. Settings'
 #: erpnext/selling/doctype/selling_settings/selling_settings.json
 msgid "Allow Sales Order with Zero Quantity"
-msgstr ""
+msgstr "Sıfır Miktarlı Satış Siparişine İzin Ver"
 
 #. Label of the allow_stale (Check) field in DocType 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
@@ -4377,7 +4377,7 @@ msgstr "Eski Döviz Kurlarına İzin Ver"
 #. 'Buying Settings'
 #: erpnext/buying/doctype/buying_settings/buying_settings.json
 msgid "Allow Supplier Quotation with Zero Quantity"
-msgstr ""
+msgstr "Sıfır Miktarla Tedarikçi Teklifine İzin Ver"
 
 #. Label of the allow_uom_with_conversion_rate_defined_in_item (Check) field in
 #. DocType 'Stock Settings'
@@ -4471,7 +4471,7 @@ msgstr "Satış Belgelerinde Stok Birimi Miktarını Düzenlemeye İzin Ver"
 #. (Check) field in DocType 'Stock Settings'
 #: erpnext/stock/doctype/stock_settings/stock_settings.json
 msgid "Allow to Make Quality Inspection after Purchase / Delivery"
-msgstr ""
+msgstr "Satın Alma / Teslimat Sonrası Kalite Kontrolü Yapılmasına İzin Verin"
 
 #. Description of the 'Allow Excess Material Transfer' (Check) field in DocType
 #. 'Manufacturing Settings'
@@ -4603,7 +4603,7 @@ msgstr "Alternatif olarak, şablonu indirebilir ve verilerinizi doldurabilirsini
 #. Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Always Ask"
-msgstr ""
+msgstr "Her Zaman Sor"
 
 #. Label of the amended_from (Link) field in DocType 'Bank Guarantee'
 #. Label of the amended_from (Link) field in DocType 'Bank Transaction'
@@ -5135,7 +5135,7 @@ msgstr "Yeniden Sipariş seviyesine göre Malzeme Talepleri oluşturulurken beli
 
 #: erpnext/buying/report/supplier_quotation_comparison/supplier_quotation_comparison.html:124
 msgid "Analysis Chart"
-msgstr ""
+msgstr "Analiz Grafiği"
 
 #: erpnext/setup/setup_wizard/data/designation.txt:4
 msgid "Analyst"
@@ -5849,7 +5849,7 @@ msgstr "Varlık Ayrıntıları"
 #. Option for the 'Entry Type' (Select) field in DocType 'Journal Entry'
 #: erpnext/accounts/doctype/journal_entry/journal_entry.json
 msgid "Asset Disposal"
-msgstr ""
+msgstr "Varlık Elden Çıkarma"
 
 #. Name of a DocType
 #: erpnext/assets/doctype/asset_finance_book/asset_finance_book.json
@@ -22236,12 +22236,12 @@ msgstr "Ürünleri Satın Alma İrsaliyesinden Getir"
 #. Label of the transfer_materials (Button) field in DocType 'Production Plan'
 #: erpnext/manufacturing/doctype/production_plan/production_plan.json
 msgid "Get Items for Purchase / Transfer"
-msgstr ""
+msgstr "Satın Alma / Transfer için Ürünleri Alın"
 
 #. Label of the get_items_for_mr (Button) field in DocType 'Production Plan'
 #: erpnext/manufacturing/doctype/production_plan/production_plan.json
 msgid "Get Items for Purchase Only"
-msgstr ""
+msgstr "Yalnızca Satın Alınacak Ürünleri Alın"
 
 #: erpnext/stock/doctype/material_request/material_request.js:310
 #: erpnext/stock/doctype/stock_entry/stock_entry.js:657
@@ -25317,7 +25317,7 @@ msgstr ""
 
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.py:192
 msgid "Invalid Sales Invoices"
-msgstr ""
+msgstr "Geçersiz Satış Faturaları"
 
 #: erpnext/assets/doctype/asset/asset.py:518
 #: erpnext/assets/doctype/asset/asset.py:537
@@ -25632,7 +25632,7 @@ msgstr "Aktif"
 #. Label of the is_additional_item (Check) field in DocType 'Work Order Item'
 #: erpnext/manufacturing/doctype/work_order_item/work_order_item.json
 msgid "Is Additional Item"
-msgstr ""
+msgstr "Ek Ürün"
 
 #. Label of the is_adjustment_entry (Check) field in DocType 'Stock Ledger
 #. Entry'
@@ -25707,7 +25707,7 @@ msgstr "Birleşik Varlık"
 #. Label of the is_composite_component (Check) field in DocType 'Asset'
 #: erpnext/assets/doctype/asset/asset.json
 msgid "Is Composite Component"
-msgstr ""
+msgstr "Kompozit Bileşen"
 
 #. Label of the is_consolidated (Check) field in DocType 'Sales Invoice'
 #: erpnext/accounts/doctype/sales_invoice/sales_invoice.json
@@ -32483,7 +32483,7 @@ msgstr "Uygunsuzluk"
 #. Category'
 #: erpnext/assets/doctype/asset_category/asset_category.json
 msgid "Non Depreciable Category"
-msgstr ""
+msgstr "Amortismana Tabi Olmayan Kategori"
 
 #: erpnext/setup/setup_wizard/operations/install_fixtures.py:167
 msgid "Non Profit"
@@ -46968,7 +46968,7 @@ msgstr "Kaydet"
 #. Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Save Changes and Load New Invoice"
-msgstr ""
+msgstr "Değişiklikleri Kaydet ve Yeni Fatura Yükle"
 
 #: erpnext/templates/includes/order/order_taxes.html:34
 #: erpnext/templates/includes/order/order_taxes.html:85
@@ -47429,7 +47429,7 @@ msgstr "Boyut Seçin"
 #. Label of the dispatch_address (Link) field in DocType 'Purchase Invoice'
 #: erpnext/accounts/doctype/purchase_invoice/purchase_invoice.json
 msgid "Select Dispatch Address "
-msgstr ""
+msgstr "Sevkiyat Adresini Seçin "
 
 #. Label of the select_doctype (Select) field in DocType 'Rename Tool'
 #: erpnext/utilities/doctype/rename_tool/rename_tool.json
@@ -47994,7 +47994,7 @@ msgstr "Seri No"
 
 #: erpnext/stock/report/available_serial_no/available_serial_no.py:144
 msgid "Serial No (In/Out)"
-msgstr ""
+msgstr "Seri No (Giriş/Çıkış)"
 
 #. Label of the serial_no_batch (Section Break) field in DocType 'Stock Entry
 #. Detail'
@@ -48574,7 +48574,7 @@ msgstr "Hizmet Durdurma Tarihi, Hizmet Başlangıç Tarihinden önce olamaz"
 
 #: erpnext/assets/doctype/asset_repair/asset_repair.py:99
 msgid "Service item not present in Purchase Invoice {0}"
-msgstr ""
+msgstr "Satın Alma Faturasında bulunmayan hizmet kalemi {0}"
 
 #. Label of the service_items (Table) field in DocType 'Asset Capitalization'
 #: erpnext/assets/doctype/asset_capitalization/asset_capitalization.json
@@ -48627,7 +48627,7 @@ msgstr "Kaynak Depo"
 #. Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Set Grand Total to Default Payment Method"
-msgstr ""
+msgstr "Genel Toplamı Varsayılan Ödeme Yöntemi Olarak Ayarla"
 
 #. Description of the 'Territory Targets' (Section Break) field in DocType
 #. 'Territory'
@@ -48743,7 +48743,7 @@ msgstr "Değerleme Oranını Kaynak Depoya Göre Ayarla"
 #. DocType 'Buying Settings'
 #: erpnext/buying/doctype/buying_settings/buying_settings.json
 msgid "Set Valuation Rate for Rejected Materials"
-msgstr ""
+msgstr "Reddedilen Malzemeler için Değerleme Oranı Belirleyin"
 
 #: erpnext/selling/doctype/sales_order/sales_order.js:227
 msgid "Set Warehouse"
@@ -49920,7 +49920,7 @@ msgstr "Bölünmüş Miktar"
 
 #: erpnext/assets/doctype/asset/asset.py:1226
 msgid "Split Quantity must be less than Asset Quantity"
-msgstr ""
+msgstr "Bölünmüş Miktar, Varlık Miktarından az olmalıdır"
 
 #: erpnext/accounts/doctype/payment_entry/payment_entry.py:2547
 msgid "Splitting {0} {1} into {2} rows as per Payment Terms"
@@ -57707,7 +57707,7 @@ msgstr ""
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.py:155
 msgid "Use Sales Invoice"
-msgstr ""
+msgstr "Satış Faturasını Kullan"
 
 #. Label of the use_serial_batch_fields (Check) field in DocType 'Stock
 #. Settings'
