--- a/erpnext/locale/sv.po
+++ b/erpnext/locale/sv.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-06-15 09:36+0000\n"
-"PO-Revision-Date: 2025-06-16 03:00\n"
+"PO-Revision-Date: 2025-06-17 02:55\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Swedish\n"
 "MIME-Version: 1.0\n"
@@ -2587,7 +2587,7 @@ msgstr "Faktisk Slut Datum (via Tidrapport)"
 
 #: erpnext/manufacturing/doctype/work_order/work_order.py:205
 msgid "Actual End Date cannot be before Actual Start Date"
-msgstr ""
+msgstr "Faktiskt Slutdatum kan inte vara före Faktiskt Startdatum"
 
 #. Label of the actual_end_time (Datetime) field in DocType 'Work Order
 #. Operation'
@@ -2658,7 +2658,7 @@ msgstr "Faktisk Kvantitet: Kvantitet tillgänglig på Lager"
 
 #: erpnext/stock/report/item_shortage_report/item_shortage_report.py:95
 msgid "Actual Quantity"
-msgstr "Verklig Kvantitet"
+msgstr "Faktisk Kvantitet"
 
 #. Label of the actual_start_date (Datetime) field in DocType 'Job Card'
 #. Label of the actual_start_date (Datetime) field in DocType 'Work Order'
@@ -2666,47 +2666,47 @@ msgstr "Verklig Kvantitet"
 #: erpnext/manufacturing/doctype/work_order/work_order.json
 #: erpnext/manufacturing/report/work_order_summary/work_order_summary.py:248
 msgid "Actual Start Date"
-msgstr "Verklig Start Datum"
+msgstr "Faktisk Start Datum"
 
 #. Label of the actual_start_date (Date) field in DocType 'Project'
 #. Label of the act_start_date (Date) field in DocType 'Task'
 #: erpnext/projects/doctype/project/project.json
 #: erpnext/projects/doctype/task/task.json
 msgid "Actual Start Date (via Timesheet)"
-msgstr "Verklig Start Datum (via Tidrapport)"
+msgstr "Faktisk Start Datum (via Tidrapport)"
 
 #. Label of the actual_start_time (Datetime) field in DocType 'Work Order
 #. Operation'
 #: erpnext/manufacturing/doctype/work_order_operation/work_order_operation.json
 msgid "Actual Start Time"
-msgstr "Verklig Start Tid"
+msgstr "Faktisk Start Tid"
 
 #. Label of the timing_detail (Tab Break) field in DocType 'Job Card'
 #: erpnext/manufacturing/doctype/job_card/job_card.json
 msgid "Actual Time"
-msgstr "Verklig Tid"
+msgstr "Faktisk Tid"
 
 #. Label of the section_break_9 (Section Break) field in DocType 'Work Order
 #. Operation'
 #: erpnext/manufacturing/doctype/work_order_operation/work_order_operation.json
 msgid "Actual Time and Cost"
-msgstr "Verklig Tid och Kostnad"
+msgstr "Faktisk Tid och Kostnad"
 
 #. Label of the actual_time (Float) field in DocType 'Project'
 #. Label of the actual_time (Float) field in DocType 'Task'
 #: erpnext/projects/doctype/project/project.json
 #: erpnext/projects/doctype/task/task.json
 msgid "Actual Time in Hours (via Timesheet)"
-msgstr "Verklig Tid i Timmar (via Tidrapport)"
+msgstr "Faktisk Tid i Timmar (via Tidrapport)"
 
 #: erpnext/stock/page/stock_balance/stock_balance.js:55
 msgid "Actual qty in stock"
-msgstr "Aktuellt Kvantitet på Lager"
+msgstr "Faktisk Kvantitet på Lager"
 
 #: erpnext/accounts/doctype/payment_entry/payment_entry.js:1490
 #: erpnext/public/js/controllers/accounts.js:176
 msgid "Actual type tax cannot be included in Item rate in row {0}"
-msgstr "Detta Moms/Avgift kan inte inkluderas i Artikel Pris på rad {0}"
+msgstr "Faktisk Moms/Avgift kan inte inkluderas i Artikel Pris på rad {0}"
 
 #. Option for the 'Add Or Deduct' (Select) field in DocType 'Advance Taxes and
 #. Charges'
@@ -9082,7 +9082,7 @@ msgstr "Beräknad Kontoutdrag Saldo"
 #. Name of a report
 #: erpnext/accounts/report/calculated_discount_mismatch/calculated_discount_mismatch.json
 msgid "Calculated Discount Mismatch"
-msgstr ""
+msgstr "Beräknad Rabatt Avvikelse"
 
 #. Label of the section_break_11 (Section Break) field in DocType 'Supplier
 #. Scorecard Period'
@@ -10123,7 +10123,7 @@ msgstr "Partner"
 #: erpnext/accounts/doctype/payment_entry/payment_entry.py:2345
 #: erpnext/controllers/accounts_controller.py:3099
 msgid "Charge of type 'Actual' in row {0} cannot be included in Item Rate or Paid Amount"
-msgstr "Debitering av typ \"Verklig\" i rad {0} kan inte inkluderas i Artikel Pris eller Betald Belopp"
+msgstr "Debitering av typ \"Faktisk\" i rad {0} kan inte inkluderas i Artikel Pris eller Betald Belopp"
 
 #. Option for the 'Account Type' (Select) field in DocType 'Account'
 #: erpnext/accounts/doctype/account/account.json
@@ -11778,7 +11778,7 @@ msgstr "Konfigurera Standard Prislista vid skapande av Inköp Order. Artikel pri
 #. 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "Confirm before resetting posting date"
-msgstr ""
+msgstr "Bekräfta innan återställning av registrering datum"
 
 #. Label of the final_confirmation_date (Date) field in DocType 'Employee'
 #: erpnext/setup/doctype/employee/employee.json
@@ -17409,7 +17409,7 @@ msgstr "Rabatt Belopp"
 
 #: erpnext/accounts/report/calculated_discount_mismatch/calculated_discount_mismatch.py:58
 msgid "Discount Amount in Transaction"
-msgstr ""
+msgstr "Rabattbelopp under Transaktion"
 
 #. Label of the discount_date (Date) field in DocType 'Payment Schedule'
 #: erpnext/accounts/doctype/payment_schedule/payment_schedule.json
@@ -17429,7 +17429,7 @@ msgstr "Rabatt Procent"
 
 #: erpnext/accounts/report/calculated_discount_mismatch/calculated_discount_mismatch.py:52
 msgid "Discount Percentage in Transaction"
-msgstr ""
+msgstr "Rabattprocent under Transaktion"
 
 #. Label of the section_break_8 (Section Break) field in DocType 'Payment Term'
 #. Label of the section_break_8 (Section Break) field in DocType 'Payment Terms
@@ -18083,7 +18083,7 @@ msgstr "Dr"
 
 #: erpnext/accounts/report/customer_ledger_summary/customer_ledger_summary.py:246
 msgid "Dr/Cr"
-msgstr ""
+msgstr "Dr/Cr"
 
 #. Option for the 'Status' (Select) field in DocType 'Dunning'
 #. Option for the 'Status' (Select) field in DocType 'Invoice Discounting'
@@ -21589,7 +21589,7 @@ msgstr "Från Personal"
 
 #: erpnext/assets/doctype/asset_movement/asset_movement.py:85
 msgid "From Employee is required while issuing Asset {0}"
-msgstr ""
+msgstr "Från Personal erfordras vid utfärdande av Tillgång {0}"
 
 #. Label of the from_external_ecomm_platform (Check) field in DocType 'Coupon
 #. Code'
@@ -23605,7 +23605,7 @@ msgstr "Om aktiverad, kommer system bara att validera prissättning regel och in
 #. DocType 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "If enabled, user will be alerted before resetting posting date to current date in relevant transactions"
-msgstr ""
+msgstr "Om aktiverad kommer användare att varnas innan registrering datum ändras till aktuellt datum i relevanta transaktioner"
 
 #. Description of the 'Variant Of' (Link) field in DocType 'Item'
 #: erpnext/stock/doctype/item/item.json
@@ -25486,7 +25486,7 @@ msgstr "Faktura Rabatt"
 
 #: erpnext/accounts/doctype/pos_settings/pos_settings.py:55
 msgid "Invoice Document Type Selection Error"
-msgstr ""
+msgstr "Faktura Dokument Typ Val Fel"
 
 #: erpnext/accounts/report/accounts_receivable/accounts_receivable.py:1118
 msgid "Invoice Grand Total"
@@ -25569,7 +25569,7 @@ msgstr "Faktura Typ"
 #. Label of the invoice_type (Select) field in DocType 'POS Settings'
 #: erpnext/accounts/doctype/pos_settings/pos_settings.json
 msgid "Invoice Type Created via POS Screen"
-msgstr ""
+msgstr "Faktura Typ skapad via Kassa"
 
 #: erpnext/projects/doctype/timesheet/timesheet.py:403
 msgid "Invoice already created for all billing hours"
@@ -27239,7 +27239,7 @@ msgstr "Artikel Moms Rad {0} måste ha Konto Typ: Moms Intäkt Kostnad eller Avg
 
 #: erpnext/accounts/doctype/item_tax_template/item_tax_template.py:48
 msgid "Item Tax Row {0}: Account must belong to Company - {1}"
-msgstr ""
+msgstr "Artikel Moms Rad {0}: Konto måste tillhöra bolag - {1}"
 
 #. Name of a DocType
 #. Label of the item_tax_template (Link) field in DocType 'POS Invoice Item'
@@ -27586,7 +27586,7 @@ msgstr "Försäljning Register per Artikel"
 
 #: erpnext/stock/get_item_details.py:697
 msgid "Item/Item Code required to get Item Tax Template."
-msgstr ""
+msgstr "Artikel / Artikel Kod erfordras för att hämta Artikel Moms Mall."
 
 #: erpnext/manufacturing/doctype/bom/bom.py:346
 msgid "Item: {0} does not exist in the system"
@@ -33067,7 +33067,7 @@ msgstr "På Bana"
 #. 'Accounts Settings'
 #: erpnext/accounts/doctype/accounts_settings/accounts_settings.json
 msgid "On enabling this cancellation entries will be posted on the actual cancellation date and reports will consider cancelled entries as well"
-msgstr "När du aktiverar denna annullering kommer poster att publiceras på faktisk annullering datum och rapporter kommer också att inkludera annullerade poster"
+msgstr "Vid aktivering av denna annullering kommer poster att registreras på det faktisk annullering datum och rapporter kommer att inkludera annullerade poster"
 
 #: erpnext/manufacturing/doctype/production_plan/production_plan.js:713
 msgid "On expanding a row in the Items to Manufacture table, you'll see an option to 'Include Exploded Items'. Ticking this includes raw materials of the sub-assembly items in the production process."
@@ -34408,7 +34408,7 @@ msgstr "Kassa"
 #. Label of the invoice_fields (Table) field in DocType 'POS Settings'
 #: erpnext/accounts/doctype/pos_settings/pos_settings.json
 msgid "POS Additional Fields"
-msgstr ""
+msgstr "Kassa Extra Fält"
 
 #: erpnext/selling/page/point_of_sale/pos_controller.js:182
 msgid "POS Closed"
@@ -37095,11 +37095,11 @@ msgstr "Skapa inte mer än 500 Artiklar åt gång"
 
 #: erpnext/accounts/doctype/budget/budget.py:133
 msgid "Please enable Applicable on Booking Actual Expenses"
-msgstr "Aktivera Tillämpningbar på Bokföring av Verkliga Kostnader"
+msgstr "Aktivera Tillämpligt vid Bokföring av Faktiska Kostnader"
 
 #: erpnext/accounts/doctype/budget/budget.py:129
 msgid "Please enable Applicable on Purchase Order and Applicable on Booking Actual Expenses"
-msgstr "Aktivera Tillämpningbar på Inköp Order och Bokföring av Verkliga Kostnader"
+msgstr "Aktivera Tillämpligt vid Inköp Order och Tillämpligt vid Bokföring av Faktiska Kostnader"
 
 #: erpnext/stock/doctype/pick_list/pick_list.py:246
 msgid "Please enable Use Old Serial / Batch Fields to make_bundle"
@@ -37582,7 +37582,7 @@ msgstr "Välj Artikel Kod innan du anger Lager."
 
 #: erpnext/selling/doctype/sales_order/sales_order.js:874
 msgid "Please select atleast one item to continue"
-msgstr ""
+msgstr "Välj artikel för att fortsätta"
 
 #: erpnext/accounts/doctype/journal_entry/journal_entry.py:1674
 msgid "Please select correct account"
@@ -38194,7 +38194,7 @@ msgstr "Registrering Datum kan inte vara i framtiden"
 
 #: erpnext/public/js/controllers/transaction.js:893
 msgid "Posting Date will change to today's date as Edit Posting Date and Time is unchecked. Are you sure want to proceed?"
-msgstr ""
+msgstr "Registrering Datum ändras till dagens datum eftersom Redigera Registrering Datum och Tid är inte valt. Är du säker på att du vill fortsätta?"
 
 #. Label of the posting_datetime (Datetime) field in DocType 'Stock Closing
 #. Balance'
@@ -52551,7 +52551,7 @@ msgstr "Support Ärende"
 
 #: erpnext/accounts/report/calculated_discount_mismatch/calculated_discount_mismatch.py:64
 msgid "Suspected Discount Amount"
-msgstr ""
+msgstr "Förväntad Rabatt Belopp"
 
 #. Option for the 'Status' (Select) field in DocType 'Driver'
 #. Option for the 'Status' (Select) field in DocType 'Employee'
@@ -52936,11 +52936,11 @@ msgstr "Plats"
 
 #: erpnext/assets/doctype/asset_movement/asset_movement.py:70
 msgid "Target Location is required for transferring Asset {0}"
-msgstr ""
+msgstr "Plats erfordras för överföring av Tillgång {0}"
 
 #: erpnext/assets/doctype/asset_movement/asset_movement.py:76
 msgid "Target Location is required while receiving Asset {0}"
-msgstr ""
+msgstr "Plats erfordras vid mottagning av Tillgång {0}"
 
 #: erpnext/selling/report/sales_partner_target_variance_based_on_item_group/sales_partner_target_variance_based_on_item_group.js:41
 #: erpnext/selling/report/sales_person_target_variance_based_on_item_group/sales_person_target_variance_based_on_item_group.js:41
@@ -54289,7 +54289,7 @@ msgstr "Synkronisering startad i bakgrunden. Kolla {0} lista för nya poster."
 #. DocType 'POS Settings'
 #: erpnext/accounts/doctype/pos_settings/pos_settings.json
 msgid "The system will create a Sales Invoice or a POS Invoice from the POS interface based on this setting. For high-volume transactions, it is recommended to use POS Invoice."
-msgstr ""
+msgstr "System kommer att skapa Försäljning Faktura eller Kassa Faktura från Kassa baserat på denna inställning. För transaktioner med stora volymer rekommenderas att Kassa Faktura används."
 
 #: erpnext/accounts/doctype/journal_entry/journal_entry.py:174
 #: erpnext/accounts/doctype/journal_entry/journal_entry.py:181
@@ -55598,7 +55598,7 @@ msgstr "Aktiva Artiklar"
 
 #: erpnext/accounts/report/budget_variance_report/budget_variance_report.py:127
 msgid "Total Actual"
-msgstr "Totalt Verklig Kostnad"
+msgstr "Totalt Faktisk Kostnad"
 
 #. Label of the total_additional_costs (Currency) field in DocType 'Stock
 #. Entry'
@@ -56630,7 +56630,7 @@ msgstr "Överföring Typ"
 #. Option for the 'Purpose' (Select) field in DocType 'Asset Movement'
 #: erpnext/assets/doctype/asset_movement/asset_movement.json
 msgid "Transfer and Issue"
-msgstr ""
+msgstr "Överför och Utfärda"
 
 #. Option for the 'Status' (Select) field in DocType 'Material Request'
 #: erpnext/stock/doctype/material_request/material_request.json
@@ -59317,7 +59317,7 @@ msgstr "Varning"
 
 #: erpnext/projects/doctype/timesheet_detail/timesheet_detail.py:124
 msgid "Warning - Row {0}: Billing Hours are more than Actual Hours"
-msgstr "Varning - Rad # {0}: Fakturerbara timmar är fler än verkliga timmar"
+msgstr "Varning - Rad # {0}: Fakturerbara timmar är fler än Faktiska Timmar"
 
 #: erpnext/stock/stock_ledger.py:800
 msgid "Warning on Negative Stock"
@@ -60984,7 +60984,7 @@ msgstr "{0} kan inte vara negativ"
 
 #: erpnext/accounts/doctype/pos_settings/pos_settings.py:52
 msgid "{0} cannot be changed with opened Opening Entries."
-msgstr ""
+msgstr "{0} kan inte ändras med öppna Öppning Poster."
 
 #: erpnext/accounts/doctype/cost_center_allocation/cost_center_allocation.py:136
 msgid "{0} cannot be used as a Main Cost Center because it has been used as child in Cost Center Allocation {1}"
